# C-chapters

./: README.md  main.c
100-number-guessr/: CMakeLists.txt  main.c
A-star-bubble-sort/: CMakeLists.txt  main.c
Animal-akinator/: CMakeLists.txt  main.c
BAO-Q1/: CMakeLists.txt
The-Wiggles-Kashyyyk-hotel/: CMakeLists.txt  main.c
XY-pattern/: CMakeLists.txt  main.c
age-cLC/: CMakeLists.txt  main.c
armstrong-number-task4/: CMakeLists.txt  main.c
battle-ship-pair-prog/: CMakeLists.txt  main.c
bolean-operator-truth-table/: CMakeLists.txt  main.c
c-tallyer-averager/: CMakeLists.txt  main.c
calculator/: CMakeLists.txt
char-case-converter/: CMakeLists.txt  main.c
condition-controlled-loops/: CMakeLists.txt  main.c
diy-circular-queue/: CMakeLists.txt  main.c  mainA2.c  output
diy-linked-list/: main.c  output
diy-stack/: A2output  CMakeLists.txt  main.c  mainA2.c  output
file-experimentation/: CMakeLists.txt
item-adder-task2/: CMakeLists.txt  main.c
item-adder-task2-proper/: CMakeLists.txt  main.c
magic-number-task3/: CMakeLists.txt  main.c
olympiad-game-task/: CMakeLists.txt  main.c
prime_checker/: CMakeLists.txt  main.c
prime_checker_(duo_task)/: CMakeLists.txt  dfvdf.c
random-generation-game/: CMakeLists.txt  main.c
random-number-game/: CMakeLists.txt  main.c
rock-paper-scissors/: main.c
siteswap-patterns/: CMakeLists.txt  main.c
tic-tac-toe-pair-prog/: CMakeLists.txt  main.c
times-tables-maker/: CMakeLists.txt  main.c
tourist-attraction-charge-calc/: main.c
weird-calculator-thing-ig/: main.c
word-guessr/: main.c  (+1 more)
